Updating libraries and renaming project name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.simcoder.tinder">
+    package="com.mcslender.tinder">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -11,19 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ChooseLoginRegistrationActivity">
+        <activity android:name="com.mcslender.tinder.MainActivity" />
+        <activity android:name="com.mcslender.tinder.ChooseLoginRegistrationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".Matches.MatchesActivity" />
-        <activity android:name=".Chat.ChatActivity"></activity>
+        <activity android:name="com.mcslender.tinder.RegistrationActivity" />
+        <activity android:name="com.mcslender.tinder.LoginActivity" />
+        <activity android:name="com.mcslender.tinder.SettingsActivity" />
+        <activity android:name="com.mcslender.tinder.Matches.MatchesActivity" />
+        <activity android:name="com.mcslender.tinder.Chat.ChatActivity"></activity>
     </application>
 
 </manifest>
